--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
         calc(var(--cast-x) * 0.55) calc(var(--cast-y) * 0.55) 10px rgba(0,0,0,0.22);
 
       filter: blur(1px);
+      z-index: 3;
+      pointer-events: none;
     }
 
     .ball{
@@ -295,7 +297,7 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
-    /* Zahlen: "Boden" Richtung Farbfeld (nach außen) */
+    /* ✅ ZAHLEN: Drehung = "Boden" Richtung Farbfeld (nach außen) */
     .slot .num{
       position:absolute;
       inset:0;
@@ -312,23 +314,28 @@
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
       transform: rotate(var(--num-rot, 0deg));
       transform-origin: 50% 50%;
+      will-change: transform;
     }
 
+    /* q0: oben & links außen */
     .board.q0 .slot-2c .num > span,
     .board.q0 .slot-2d .num > span { --num-rot: 180deg; }
     .board.q0 .slot-3b .num > span,
     .board.q0 .slot-4b .num > span { --num-rot: -90deg; }
 
+    /* q1: oben & rechts außen */
     .board.q1 .slot-2c .num > span,
     .board.q1 .slot-2d .num > span { --num-rot: 180deg; }
     .board.q1 .slot-3b .num > span,
     .board.q1 .slot-4b .num > span { --num-rot: 90deg; }
 
+    /* q2: unten & rechts außen */
     .board.q2 .slot-2c .num > span,
     .board.q2 .slot-2d .num > span { --num-rot: 0deg; }
     .board.q2 .slot-3b .num > span,
     .board.q2 .slot-4b .num > span { --num-rot: 90deg; }
 
+    /* q3: unten & links außen */
     .board.q3 .slot-2c .num > span,
     .board.q3 .slot-2d .num > span { --num-rot: 0deg; }
     .board.q3 .slot-3b .num > span,
@@ -365,31 +372,32 @@
       user-select: none;
       -webkit-tap-highlight-color: transparent;
     }
-    .btn[disabled]{ opacity:0.65; cursor: default; }
+    .btn:active{
+      transform: translateY(1px) scale(0.99);
+      filter: brightness(0.97);
+    }
+    .btn[disabled]{
+      opacity: 0.65;
+      cursor: default;
+      transform: none;
+    }
 
-    /* -------------------------------------------------
-       ✅ Statische Zwischenansicht ("Bild") als Overlay
-       ------------------------------------------------- */
-    .midLayer{
+    /* ✅ Pop ("blup") NUR am inneren Span, damit Rotation erhalten bleibt */
+    @keyframes popIn {
+      0%   { transform: rotate(var(--num-rot, 0deg)) scale(0.70); filter: brightness(1.05); }
+      60%  { transform: rotate(var(--num-rot, 0deg)) scale(1.10); }
+      100% { transform: rotate(var(--num-rot, 0deg)) scale(1.00); filter: none; }
+    }
+    .slot.pop .num > span{
+      animation: popIn 220ms ease-out;
+    }
+
+    /* ✅ Overlay-Layer für Zwischenbild */
+    .kippOverlay{
       position:absolute;
       inset:0;
-      z-index: 20;
+      z-index: 50;
       pointer-events:none;
-      display:none;
-    }
-    .midItem{
-      position:absolute;
-      left:0; top:0;
-      width: 0; height: 0; /* wird per JS gesetzt */
-    }
-    .midItem .cubeShadow,
-    .midItem .cube,
-    .midItem .slot{
-      position:absolute;
-      left:0; top:0;
-    }
-    .midItem .cubeShadow{
-      filter: blur(1px);
     }
   </style>
 </head>
@@ -400,22 +408,19 @@
       <div class="floor" aria-hidden="true"></div>
 
       <div class="shadowLayer" aria-hidden="true">
-        <div class="cubeShadow" id="cubeShadow"></div>
+        <div class="cubeShadow"></div>
       </div>
 
       <div class="ball" aria-label="Kugel"></div>
 
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <div class="cube" id="cube" aria-label="Würfel"></div>
+      <div class="cube" aria-label="Würfel"></div>
 
       <div class="slot slot-2c" data-slot="F3" aria-label="Slot 2C"><div class="num"><span></span></div></div>
       <div class="slot slot-2d" data-slot="F4" aria-label="Slot 2D"><div class="num"><span></span></div></div>
       <div class="slot slot-3b" data-slot="F2" aria-label="Slot 3B"><div class="num"><span></span></div></div>
       <div class="slot slot-4b" data-slot="F1" aria-label="Slot 4B"><div class="num"><span></span></div></div>
-
-      <!-- ✅ Zwischenbild-Overlay -->
-      <div class="midLayer" id="midLayer" aria-hidden="true"></div>
     </div>
 
     <div class="controls">
@@ -428,9 +433,8 @@
     const grid = document.getElementById("grid");
     const btn = document.getElementById("btnBestuecken");
 
-    const cubeEl = document.getElementById("cube");
-    const cubeShadowEl = document.getElementById("cubeShadow");
-    const midLayer = document.getElementById("midLayer");
+    const cubeEl = document.querySelector(".cube");
+    const cubeShadowEl = document.querySelector(".cubeShadow");
 
     const slotEls = Array.from(document.querySelectorAll(".slot"));
     const slotSpanEls = new Map(slotEls.map(s => [s.dataset.slot, s.querySelector(".num > span")]));
@@ -499,11 +503,12 @@
       boardEl.style.setProperty("--cube-row", String(Q[q].row));
     }
 
-    // ---------- Zahlen / Bestückung ----------
+    // ---------- Helpers ----------
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
     function clearSlots(){
       for (const el of slotSpanEls.values()) el.textContent = "";
+      slotEls.forEach(s => s.classList.remove("pop"));
     }
 
     function shuffle(arr){
@@ -525,13 +530,39 @@
         const slotKey = order[i];
         const span = slotSpanEls.get(slotKey);
         if(!span) continue;
+
         span.textContent = String(numbers[i]);
+
+        const slotEl = slotEls.find(s => s.dataset.slot === slotKey);
+        if (slotEl){
+          slotEl.classList.remove("pop");
+          void slotEl.offsetWidth;
+          slotEl.classList.add("pop");
+        }
+
         await sleep(tempoMs);
       }
+      slotEls.forEach(s => s.classList.remove("pop"));
     }
 
-    // ---------- Statische Zwischenansicht ----------
-    function directionForMove(fromQ, toQ){
+    // ---------- Zwischenbild (Overlay, "Photoshop") ----------
+    function getPxVar(name){
+      const v = getComputedStyle(boardEl).getPropertyValue(name).trim();
+      return parseFloat(v) || 0;
+    }
+
+    function cubeSizePx(){
+      const cell = getPxVar("--cell");
+      const gap  = getPxVar("--cell-gap");
+      return 3 * cell + 2 * gap;
+    }
+
+    function posForQ(q){
+      const step = getPxVar("--step");
+      return { left: Q[q].col * step, top: Q[q].row * step };
+    }
+
+    function directionForClockwise(fromQ, toQ){
       // clockwise: 0->1 right, 1->2 down, 2->3 left, 3->0 up
       if (fromQ === 0 && toQ === 1) return "Right";
       if (fromQ === 1 && toQ === 2) return "Down";
@@ -540,176 +571,109 @@
       return "Right";
     }
 
-    function px(v){
-      return parseFloat(String(v).replace("px","").trim()) || 0;
-    }
+    function buildSnapshotGroup(isEmpty){
+      // Gruppe: Würfelfläche + 4 Slots (+ Zahlen) als statisches "Bild"
+      const g = document.createElement("div");
+      g.style.position = "absolute";
+      g.style.width = cubeSizePx() + "px";
+      g.style.height = cubeSizePx() + "px";
+      g.style.pointerEvents = "none";
 
-    function getMetrics(){
-      const csBoard = getComputedStyle(boardEl);
-      const csRoot  = getComputedStyle(document.documentElement);
+      const cubeClone = cubeEl.cloneNode(true);
+      cubeClone.style.left = "0px";
+      cubeClone.style.top  = "0px";
 
-      const step = px(csBoard.getPropertyValue("--step"));
-      const cell = px(csBoard.getPropertyValue("--cell"));
-      const gap  = px(csRoot.getPropertyValue("--cell-gap"));
+      const slotClones = slotEls.map(s => s.cloneNode(true));
 
-      const cubeSize = (3 * cell) + (2 * gap);
-
-      const xMid = 4 * step; // vertikale Mittelachse (zwischen D/E)
-      const yMid = 4 * step; // horizontale Mittelachse (zwischen 4/5)
-
-      return { step, cell, gap, cubeSize, xMid, yMid };
-    }
-
-    function createMidItem(withNumbers){
-      const wrap = document.createElement("div");
-      wrap.className = "midItem";
-
-      // Shadow
-      const sh = cubeShadowEl.cloneNode(true);
-      sh.removeAttribute("id");
-
-      // Cube
-      const cu = cubeEl.cloneNode(true);
-      cu.removeAttribute("id");
-
-      // Slots (mit oder ohne Zahlen)
-      const slots = slotEls.map(s => {
-        const c = s.cloneNode(true);
-        if (!withNumbers){
-          const span = c.querySelector(".num > span");
+      if (isEmpty){
+        slotClones.forEach(sc => {
+          const span = sc.querySelector(".num > span");
           if (span) span.textContent = "";
-        }
-        return c;
+        });
+      }
+
+      // Slots pixelgenau relativ zur Würfelgruppe platzieren (damit nix verrutscht)
+      const cubeRect = cubeEl.getBoundingClientRect();
+      slotClones.forEach((sc, idx) => {
+        const origRect = slotEls[idx].getBoundingClientRect();
+        sc.style.left = (origRect.left - cubeRect.left) + "px";
+        sc.style.top  = (origRect.top  - cubeRect.top)  + "px";
       });
 
-      // Positionen im Mid-Item müssen "0,0" starten:
-      // -> wir schalten die originalen slot-* Positionen aus, indem wir die inline left/top setzen.
-      // Wir übernehmen die "aktuellen" Pixelpositionen der Elemente relativ zur Board-Null.
-      // Dazu lesen wir die BoundingRects und rechnen um.
-      const boardRect = boardEl.getBoundingClientRect();
-      const cubeRect  = cubeEl.getBoundingClientRect();
-      const shRect    = cubeShadowEl.getBoundingClientRect();
-
-      // cube + shadow im wrapper an 0,0
-      cu.style.left = "0px";
-      cu.style.top  = "0px";
-      sh.style.left = "0px";
-      sh.style.top  = "0px";
-
-      // Slots relativ zum cubeRect
-      for (const c of slots){
-        const slotKey = c.dataset.slot;
-        const orig = slotEls.find(x => x.dataset.slot === slotKey);
-        const r = orig.getBoundingClientRect();
-
-        c.style.left = (r.left - cubeRect.left) + "px";
-        c.style.top  = (r.top  - cubeRect.top)  + "px";
-      }
-
-      // Shadow muss deckungsgleich zum cubeRect sein:
-      // wir setzen im MidItem shadow top/left auf (shadowRect - cubeRect)
-      sh.style.left = (shRect.left - cubeRect.left) + "px";
-      sh.style.top  = (shRect.top  - cubeRect.top)  + "px";
-
-      wrap.appendChild(sh);
-      wrap.appendChild(cu);
-      for (const c of slots) wrap.appendChild(c);
-
-      // Maße
-      const { cubeSize } = getMetrics();
-      wrap.style.width  = cubeSize + "px";
-      wrap.style.height = cubeSize + "px";
-
-      return wrap;
+      g.appendChild(cubeClone);
+      slotClones.forEach(sc => g.appendChild(sc));
+      return g;
     }
 
-    async function showMidState(fromQ, toQ, ms=2000){
-      // 1) MidLayer vorbereiten
-      midLayer.innerHTML = "";
-      midLayer.style.display = "block";
+    async function showIntermediate(fromQ, toQ, ms){
+      // Originale ausblenden (damit Overlay wirklich "Bild" ist)
+      const prevCubeOpacity = cubeEl.style.opacity;
+      const prevShadowOpacity = cubeShadowEl.style.opacity;
+      const prevSlotOpacity = slotEls.map(s => s.style.opacity);
 
-      // 2) Aktuelles "Bild" (mit Zahlen) und nächstes "Bild" (leer) erzeugen
-      const rightOrBottomHasCurrent = true; // wir setzen gleich je nach Richtung passend
-      const dir = directionForMove(fromQ, toQ);
+      cubeEl.style.opacity = "0";
+      cubeShadowEl.style.opacity = "0";
+      slotEls.forEach(s => (s.style.opacity = "0"));
 
-      const A = createMidItem(true);  // aktueller Zustand (mit Zahlen)
-      const B = createMidItem(false); // nächster Zustand (leer)
+      const overlay = document.createElement("div");
+      overlay.className = "kippOverlay";
+      boardEl.appendChild(overlay);
 
-      // 3) Positionierung an Mittellinie + 50% quetschen, KANTE an Mittellinie fix
-      const { cubeSize, xMid, yMid } = getMetrics();
+      // W1 (mit Zahlen) + W2 (leer) als Snapshot
+      const w1 = buildSnapshotGroup(false);
+      const w2 = buildSnapshotGroup(true);
 
-      // wir blenden die echten Elemente aus, damit wirklich nur das "Bild" sichtbar ist
-      cubeEl.style.visibility = "hidden";
-      cubeShadowEl.style.visibility = "hidden";
-      slotEls.forEach(s => s.style.visibility = "hidden");
+      const pFrom = posForQ(fromQ);
+      const pTo   = posForQ(toQ);
 
-      if (dir === "Left" || dir === "Right"){
-        const top = Q[fromQ].row * getMetrics().step;
+      // Plätze tauschen:
+      // W1 -> Zielquadrant, W2 (leer) -> Startquadrant
+      w1.style.left = pTo.left + "px";
+      w1.style.top  = pTo.top  + "px";
 
-        // Combined width bleibt cubeSize. Jede Seite bekommt cubeSize/2.
-        // LEFT-Teil: rechte Kante fix an xMid
-        // RIGHT-Teil: linke Kante fix an xMid
-        const leftPart  = (dir === "Left")  ? B : A; // bei Left: links ist "nächstes leer"
-        const rightPart = (dir === "Left")  ? A : B;
+      w2.style.left = pFrom.left + "px";
+      w2.style.top  = pFrom.top  + "px";
 
-        leftPart.style.left = (xMid - (cubeSize/2)) + "px";
-        leftPart.style.top  = top + "px";
-        leftPart.style.transformOrigin = "100% 50%";
-        leftPart.style.transform = "scaleX(0.5)";
+      // 50% quetschen zur Mittellinie (Transform-Origin an innerer Kante)
+      const dir = directionForClockwise(fromQ, toQ);
 
-        rightPart.style.left = xMid + "px";
-        rightPart.style.top  = top + "px";
-        rightPart.style.transformOrigin = "0% 50%";
-        rightPart.style.transform = "scaleX(0.5)";
-
-        midLayer.appendChild(leftPart);
-        midLayer.appendChild(rightPart);
-      } else {
-        const left = Q[fromQ].col * getMetrics().step;
-
-        // UP/DOWN: Combined height bleibt cubeSize. Jede Seite cubeSize/2.
-        // TOP-Teil: untere Kante fix an yMid
-        // BOTTOM-Teil: obere Kante fix an yMid
-        const topPart    = (dir === "Up")   ? B : A; // bei Up: oben ist "nächstes leer"
-        const bottomPart = (dir === "Up")   ? A : B;
-
-        topPart.style.left = left + "px";
-        topPart.style.top  = (yMid - (cubeSize/2)) + "px";
-        topPart.style.transformOrigin = "50% 100%";
-        topPart.style.transform = "scaleY(0.5)";
-
-        bottomPart.style.left = left + "px";
-        bottomPart.style.top  = yMid + "px";
-        bottomPart.style.transformOrigin = "50% 0%";
-        bottomPart.style.transform = "scaleY(0.5)";
-
-        midLayer.appendChild(topPart);
-        midLayer.appendChild(bottomPart);
+      if (dir === "Right"){
+        w2.style.transformOrigin = "100% 50%";
+        w1.style.transformOrigin = "0% 50%";
+        w2.style.transform = "scaleX(0.5)";
+        w1.style.transform = "scaleX(0.5)";
+      } else if (dir === "Left"){
+        w2.style.transformOrigin = "0% 50%";
+        w1.style.transformOrigin = "100% 50%";
+        w2.style.transform = "scaleX(0.5)";
+        w1.style.transform = "scaleX(0.5)";
+      } else if (dir === "Down"){
+        w2.style.transformOrigin = "50% 100%";
+        w1.style.transformOrigin = "50% 0%";
+        w2.style.transform = "scaleY(0.5)";
+        w1.style.transform = "scaleY(0.5)";
+      } else { // Up
+        w2.style.transformOrigin = "50% 0%";
+        w1.style.transformOrigin = "50% 100%";
+        w2.style.transform = "scaleY(0.5)";
+        w1.style.transform = "scaleY(0.5)";
       }
+
+      // Reihenfolge: erst leer, dann Zahlen drüber (optisch schön)
+      overlay.appendChild(w2);
+      overlay.appendChild(w1);
 
       await sleep(ms);
 
-      // 4) MidLayer weg, echte Elemente wieder zeigen
-      midLayer.style.display = "none";
-      midLayer.innerHTML = "";
+      overlay.remove();
 
-      cubeEl.style.visibility = "visible";
-      cubeShadowEl.style.visibility = "visible";
-      slotEls.forEach(s => s.style.visibility = "visible");
+      // Originale wieder einblenden
+      cubeEl.style.opacity = prevCubeOpacity || "";
+      cubeShadowEl.style.opacity = prevShadowOpacity || "";
+      slotEls.forEach((s, i) => (s.style.opacity = prevSlotOpacity[i] || ""));
     }
 
-    async function moveWithStaticMid(toQ){
-      const fromQ = currentQ;
-      const dir = directionForMove(fromQ, toQ);
-
-      // wir setzen zuerst die Zielposition NICHT – wir zeigen erst das Zwischenbild
-      await showMidState(fromQ, toQ, 2000);
-
-      // dann „springt“ es zum Ziel (statisch)
-      applyQuadrant(toQ);
-    }
-
-    // ---------- Ablauf Bestückung (W1 -> Mid -> W2 leer -> W2 Zahlen -> Mid -> W3 leer -> W3 Zahlen) ----------
+    // ---------- Ablauf: 3 Bilder ----------
     let busy = false;
 
     async function runBestueckung(){
@@ -719,29 +683,23 @@
 
       clearSlots();
 
+      // W1 random ziehen (4 Zahlen) und langsam einblenden (gesamt ~5s)
       const nums = draw12();
       const W1 = nums.slice(0,4);
-      const W2 = nums.slice(4,8);
-      const W3 = nums.slice(8,12);
 
-      const popTempo = 380;
+      // 4 Zahlen * 1250ms = 5 Sekunden
+      await placeFour(W1, 1250);
 
-      // W1
-      await placeFour(W1, popTempo);
+      // 5 Sekunden stehen lassen (W1 fertig sichtbar)
+      await sleep(5000);
 
-      // zu W2: Zwischenbild (statisch) -> dann W2 leer -> Zahlen
-      const qW2 = (currentQ + 1) % 4;
-      await moveWithStaticMid(qW2);
+      // Zwischenbild 5 Sekunden (W1 & leere W2 getauscht, 50% gequetscht zur Mittellinie)
+      const nextQ = (currentQ + 1) % 4; // Uhrzeigersinn
+      await showIntermediate(currentQ, nextQ, 5000);
+
+      // Endbild: leere W2 im Zielquadranten (100%)
+      applyQuadrant(nextQ);
       clearSlots();
-      await sleep(2000); // leere Fläche 2s
-      await placeFour(W2, popTempo);
-
-      // zu W3
-      const qW3 = (currentQ + 1) % 4;
-      await moveWithStaticMid(qW3);
-      clearSlots();
-      await sleep(2000); // leere Fläche 2s
-      await placeFour(W3, popTempo);
 
       btn.disabled = false;
       busy = false;
@@ -757,7 +715,7 @@
 
       buildGridOnce();
 
-      // Start random Ecke
+      // Würfel ist beim Start schon random in einer Ecke, leer
       applyQuadrant(Math.floor(Math.random() * 4));
       clearSlots();
     });
